tests/ui/traits/trait-upcasting/subtrait-method.stderr
error[E0599]: no method named `c` found for reference `&dyn Bar` in the current scope
  --> $DIR/subtrait-method.rs:55:9
   |
LL |     bar.c();
   |         ^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:27:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^
help: there is a method `a` with a similar name
   |
LL |     bar.a();
   |         ~

error[E0599]: no method named `b` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:59:9
   |
LL |     foo.b();
   |         ^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Bar` defines an item `b`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:17:1
   |
LL | trait Bar: Foo {
   | ^^^^^^^^^^^^^^
help: there is a method `a` with a similar name
   |
LL |     foo.a();
   |         ~

error[E0599]: no method named `c` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:61:9
   |
LL |     foo.c();
   |         ^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:27:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^
help: there is a method `a` with a similar name
   |
LL |     foo.a();
   |         ~

error[E0599]: no method named `b` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:65:9
   |
LL |     foo.b();
   |         ^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Bar` defines an item `b`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:17:1
   |
LL | trait Bar: Foo {
   | ^^^^^^^^^^^^^^
help: there is a method `a` with a similar name
   |
LL |     foo.a();
   |         ~

error[E0599]: no method named `c` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:67:9
   |
LL |     foo.c();
   |         ^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:27:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^
help: there is a method `a` with a similar name
   |
LL |     foo.a();
   |         ~

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0599`.
